# RLEnv-Ardu-Quiz

./: .gitignore  README.md
docs/: 01-anatomy.md
environments/vf_ardu_quiz/: README.md  pyproject.toml  vf_ardu_quiz.py
environments/vf_ardu_quiz/outputs/evals/vf-ardu-quiz--guesser/2960d019/: metadata.json  results.jsonl
environments/vf_ardu_quiz/outputs/evals/vf-ardu-quiz--meta-llama--Llama-3.2-3B-Instruct/b9ac6007/: metadata.json  results.jsonl
environments/vf_ardu_quiz/outputs/evals/vf-ardu-quiz--meta-llama--llama-3.3-70b-instruct/66371e14/: metadata.json  results.jsonl
environments/vf_ardu_quiz/outputs/evals/vf-ardu-quiz--no-format/9d297b1a/: metadata.json  results.jsonl
environments/vf_ardu_quiz/outputs/evals/vf-ardu-quiz--oracle/ee46b9f9/: metadata.json  results.jsonl
environments/vf_ardu_quiz/outputs/evals/vf-ardu-quiz--strong-80/faaeaa46/: metadata.json  results.jsonl
environments/vf_ardu_quiz/outputs/evals/vf-ardu-quiz--weak-40/a19360a1/: metadata.json  results.jsonl
environments/vf_ardu_quiz/tests/: test_vf_ardu_quiz.py
tools/: mock_openai_server.py
