[project]
name = "vf-ardu-quiz"
description = "Single-turn ArduPilot dataflash-log diagnosis quiz: pick the root cause from a closed taxonomy, scored by a deterministic exact-match verifier."
tags = ["ardupilot", "diagnosis", "single-turn", "xml", "eval", "train"]
license = "Apache-2.0"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."verifiers.environments"]
vf-ardu-quiz = "vf_ardu_quiz:load_environment"

[tool.hatch.build]
include = ["vf_ardu_quiz.py", "pyproject.toml"] 

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
